syntax = "proto3";

package ai.metathings.service.deviced;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "device.proto";

message GetDeviceRequest {
	google.protobuf.StringValue id = 1 [(validator.field) = {msg_exists: true}];
}

message GetDeviceResponse {
	Device device = 1;
}
